# Workflow

./: .gitignore  CMakeLists.txt  config.txt  main.cpp
ConfigReader/: config_reader.cpp  config_reader.h
Example/: config.txt  in_file.txt  out.txt  out_file.txt
Exceptions/: exception.h  executor_exceptions.cpp  executor_exceptions.h  executor_excetions.cpp  executor_excetions.h  worker_exception.cpp  worker_exception.h
WorkExecutor/: work_data.cpp  work_data.h  work_executor.cpp  work_executor.h
Workers/: worker.h  worker_dump.cpp  worker_dump.h  worker_grep.cpp  worker_grep.h  worker_read.cpp  worker_read.h  worker_replace.cpp  worker_replace.h  worker_sort.cpp  worker_sort.h  worker_write.cpp  worker_write.h
